kubernetes/homepage/homepage-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
spec:
  selector:
    app.kubernetes.io/name: homepage
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
